// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> should render the component as actual type 1`] = `
<CellStyled
  type="actual"
>
  <Total
    total={300}
    totalOfTheWeek={2130}
    type="actual"
  />
  <Percentage
    total={300}
    totalOfTheWeek={2130}
  />
</CellStyled>
`;

exports[`<Cell /> should render the component as forecast type 1`] = `
<CellStyled
  type="forecast"
>
  <Total
    total={1500}
    totalOfTheWeek={2130}
    type="forecast"
  />
  <Percentage
    total={1500}
    totalOfTheWeek={2130}
  />
</CellStyled>
`;
